# tflite-interpreter-wrapper

./: CMakeLists.txt
